# custom3dengine

./: .gitignore  CMakeLists.txt  MyFirstEngine.vcxproj.filters  README.md  Shader.cpp  Shader.h  build.bat  rebuild_and_open.bat  rebuild_and_open.bat.bak
Assets/shaders/: Shader.h.bak  triangle.frag  triangle.frag.bak  triangle.vert  triangle.vert.bak
MyFirstEngine/MyFirstEngine/: CMakeLists.txt  MyFirstEngine.sln  MyFirstEngine.vcxproj  Renderer.cpp  Renderer.h  main.cpp  triangle.vert
MyFirstEngine/MyFirstEngine/MyFirstEngine/x64/Debug/MyFirstEngine.tlog/: CL.command.1.tlog
MyFirstEngine/MyFirstEngine/glad/include/glad/: glad.h
MyFirstEngine/x64/Debug/: vc143.idb
MyFirstEngine/x64/Debug/MyFirstEngine.tlog/: MyFirstEngine.lastbuildstate
include/: SimpleMath.h  SimpleMath.h.bak
include/MyFirstEngine/: Camera.h  Camera.h.bak  Framebuffer.h.bak  GameObject.h  Renderer.h  Shader.h  Transform.h
src/: Camera.cpp  Framebuffer.cpp  Framebuffer.cpp.bak  Renderer.cpp  Shader.cpp  glad.c  main.cpp
